<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water"
    tools:context="com.example.android.hydrate.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="#80FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="number"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calcWaterNeeded"
                android:text="@string/button_calculate"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_string_1"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/water_needed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="\?"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_string_2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_margin ="8dp"
            android:background="@color/colorPrimary">
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/counter_title"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/water_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/unit_of_measure"
            android:textColor="@android:color/black"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/small_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/buttonBackground"
            android:onClick="smallWater"
            android:padding="16dp"
            android:text="@string/small"
            android:textColor="@color/buttonText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/medium_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/buttonBackground"
            android:onClick="mediumWater"
            android:padding="16dp"
            android:text="@string/medium"
            android:textColor="@color/buttonText"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/large_water"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/buttonBackground"
            android:onClick="largeWater"
            android:padding="16dp"
            android:text="@string/large"
            android:textColor="@color/buttonText"
            android:textSize="16sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_margin = "8dp"
            android:background="@color/colorPrimary">
        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:onClick="resetCounter"
                android:text="@string/button_reset_counter"
                android:textSize="16sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:onClick="resetWeight"
                android:text="@string/button_reset_weight"
                android:textSize="16sp"/>

        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>
